amended 1 line of css that was preventing a vertical gap in the forecast section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
   margin: 0.5 0rem;
 }
 
-section#forecast-cards {
+section#forecast {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
